--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -28,10 +28,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;500;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>42 Live Stat</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
